Fix/var85 recurring reservation date selector (#37)
* Improvements to form layout and appearance. Calendar no longer overflows on desktop and tablets

* Calendar element fixes on mobile.

--- a/app/shared/date-picker/_date-picker.scss
+++ b/app/shared/date-picker/_date-picker.scss
@@ -1,6 +1,7 @@
 .date-picker {
   position: relative;
   border: 1px solid $input-border;
+  @include add-focus
 
   &::after {
     $arrow-size: 6px;
@@ -17,14 +18,21 @@
 
   input {
     border: none;
+    width: 100%;
   }
-  
+
   .date-picker-overlay {
     background-color: white;
     position: absolute;
     z-index: 100;
     border: solid 2px $brand-primary;;
     padding: 20px;
+    @media (max-width: $screen-xs-max){
+      width: 330px;
+      padding-top: 12px;
+      padding-left: 8px;
+      padding-right: 8px;
+    }
   }
 
   .DayPicker {
@@ -33,19 +41,22 @@
     max-width: 400px;
     margin: 0 auto;
     width: 100%;
-  
+    @media (max-width: $screen-xs-max){
+      width: 300px;
+    }
+
     &:focus {
       outline: none;
     }
   }
-  
+
   .DayPicker-NavBar {
     position: absolute;
     display: flex;
     width: 100%;
     justify-content: space-between;
   }
-  
+
   .DayPicker-Caption {
     height: auto;
     font-weight: 600;
@@ -54,7 +65,7 @@
     text-transform: capitalize;
     text-align: center;
   }
-  
+
   .DayPicker-NavButton--prev {
     @include icon-angle-left($black);
     width: $line-height-computed;
@@ -62,20 +73,23 @@
     position: static;
     margin-right: 0;
   }
-  
+
   .DayPicker-NavButton--next {
     @include icon-angle-right($black);
     width: $line-height-computed;
     height: $line-height-computed;
     position: static;
   }
-  
+
   .DayPicker-Month {
     margin: 0;
     border-collapse: separate;
     width: 100%;
+    @media (max-width: $screen-xs-max){
+      border-collapse: collapse;
+    }
   }
-  
+
   .DayPicker-Day {
     border: 2px solid $white;
     margin: 1px;
@@ -84,7 +98,10 @@
     background-color: $light-gray;
     border-radius: 0;
     font-size: 1.6rem;
-  
+    @media (max-width: $screen-xs-max){
+      font-size: 1.2rem;
+    }
+
     &:focus {
       outline: none;
     }
@@ -108,16 +125,16 @@
       background-color: $dark-gray;
     }
   }
-  
+
   .DayPicker-Day--today {
     border: 2px solid $black;
   }
-  
+
   .DayPicker-WeekdaysRow {
     padding: 0.2rem;
     font-size: 1.4rem;
   }
-  
+
   .DayPicker-Weekdays {
     text-transform: uppercase;
     font-weight: normal;
@@ -127,11 +144,11 @@
       vertical-align: text-top;
     }
   }
-  
+
   .DayPicker-Weekday {
     color: $black;
   }
-  
+
   .DayPicker-WeekNumber {
     font-size: 14px;
   }
